various responsive alignment fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,12 +24,21 @@ main {
 .padding {
     padding:15px 15px;
 }
+
+a {
+    color: inherit;
+    text-decoration: none;
+    background-color: transparent;
+}
+
+a:hover {
+    color: inherit;
+    text-decoration: underline;
+    text-decoration-color: #FF785A
+}
 /*Colors*/
 
     /*footer colors*/
-address a {
-    color: #028EAF;
-}
 
 .bdr-top {
     border-top: 2px solid #FF785A;
@@ -40,6 +49,13 @@ h2 {
     text-transform: capitalize;
     font-weight:600;
     font-family: 'Roboto',sans-serif!important;
+}
+
+h3 {
+    color: #028eaf;
+    font-weight: 600;
+    text-transform: capitalize;
+    font-family: 'Roboto', sans-serif!important;
 }
 
 .bdr-left {
@@ -129,7 +145,7 @@ div a img {
     }
 }
 @media only screen and (max-width:812px) {
-#bg-box, #trans-box {
+#bg-box, #trans-box, #tagline, #hero-image {
     display: none;
     }
 }
@@ -152,14 +168,32 @@ footer {
     }
 }
 
+@media only screen and (max-width:812px) {
+.mobile-margin {
+    margin-top: auto!important;
+    }
+}
+
 .you-tube {
     width: -webkit-fill-available;
 }
 
+.mobile-head {
+    background-color: #ff785a;
+    background-image: url(../images/blizzard.png);
+    color: white;
+    display: block;
+    text-transform: capitalize;
+    font-family: 'Roboto';
+    text-align: center;
+    text-shadow: 0.6rem 0.5rem 0.3rem white;
+    font-weight: 700;
+}
+
 /*main*/
 #tagline {
-    top: 114px;
-    right: 139px;
+    top: 3em;
+    right: 2em;
     position: absolute;
     text-transform: uppercase;
     font-size: 2em;
@@ -182,11 +216,6 @@ div > span, .trans-content {
     font-size: 1.8em;
 }
 
-div p > span {
-    color:#028EAF;
-    font-weight: 700;
-}
-
 #overlap {
     position: relative;
 }
@@ -194,17 +223,20 @@ div p > span {
 #hero-image {
     margin-top: 10rem;
     width:100%;
+    border: 2px solid #028eaf;
 }
 
 #figure-img {
-    background-image: url(../images/joeprusa.jpg);
+    /*background-image: url(../images/joeprusa.jpg);*/
     width: 280px;
     height:280px;
     position:absolute;
-    margin-top: -2vh;
+    max-width:100%;
+    max-height:100%;
+    /*margin-top: -2vh;
     border: 4px solid #fff;
     border-radius: 5px;
-    margin-right: 30vw;
+    margin-right: 30vw;*/
 }
 
 .relative {
@@ -212,7 +244,7 @@ div p > span {
 }
 
 #trans-box {
-    background-color: rgba(196, 196, 196, 0.5);
+    background-color: rgba(142,136,136,0.9);
     width:625px;
     height:285px;
     top: 456px;
@@ -221,6 +253,7 @@ div p > span {
     color:#fff;
     text-align: right;
     font-weight:400;
+    border: 2px solid #FF785A;
 }
 
 #bg-box {
@@ -231,11 +264,11 @@ div p > span {
     top: 372px;
     right: 50px;
     position: absolute;
+    border: 2px solid #35CE8D;
 }
 
 .section-head{
     margin-top: 11rem;
-    margin-left: 10rem;
     padding-bottom: 10px;
     font-size: 3em;
     font-weight: 500;
